Tue Jul 20 10:12:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSString.m: Update code for standardising paths - now
	conforms to MacOS-X spec (more or less).

Thu Jul 15  6:26:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/Foundation/NSURL.h: Tidied
	* Headers/Foundation/NSURLHandle.h: Tidied
	* Headers/Foundation/Foundation.h: inlcude NSURL.h and NSURLHandle.h

Wed Jul 14 20:19:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSThread.m: Make sure that a thread retains the target object
	and argument of the method with which it is detached.
	* Testing/diningPhilosophers.m: Fixed bug - was passing non NSObject
	argument.

Wed Jul 14 16:58:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAttributedString.m: Fixed ([allocWithZone:]) so that
	subclasses should work correctly.

Wed Jul 14 10:32:17 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Testing/Makefile.preamble: Fix include path the headers.
	Other testing fixes

Tue Jul 13 17:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUser.m: Implemented NSStandardApplicationPaths(),
	NSStandardLibraryPaths(), and GSStandardPathPrefixes().

Mon Jul 12  5:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSString.m: Bugfixes in ([stringByStandardizingPath:])
	as suggested by Pascal Bourguignon. Also fix to do substitutions
	throughout path, also use realpath() for resolving links if possible.
	* configure.in: Check for realpath()

Sat Jul 10 13:52:20 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Makefile.postamble: Create Foundation link in Source directory
	* Source/Makefile.postamble: Remove link to Foundation
	(work around bug in make?)

Thu Jul  8 22:21:54 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Changes for new directory layout.
	* Makefile.postamble: Link Foundation from gnustep/base
	* configure.in: Change location of generated include files.